--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
             <li>
               <a
                 href="mailto:info@devstudio.com"
-                class="link item-mail addres-gap line"
+                class="link item-mail addres-gap"
                 >info@devstudio.com</a
               >
             </li>
             <li>
-              <a href="tel:+110001111111" class="link item-mail line"
+              <a href="tel:+110001111111" class="link item-mail"
                 >+11 (000) 111-11-11</a
               >
             </li>
