--- a/index.html
+++ b/index.html
@@ -64,10 +64,13 @@
           <h1 class="effsolutions-one effsolutions">Effective Solutions</h1>
           <p class="effsolutions">for your Business</p>
           <div class="section-one-button">
-            <button type="button" class="button-main">Order Service</button>
+            <button data-modal-open type="button" class="button-main">
+              Order Service
+            </button>
           </div>
         </div>
       </section>
+
       <!--section2-->
 
       <section class="section-two">
@@ -417,5 +420,17 @@
         </div>
       </div>
     </footer>
+    <!-- МОДАЛКА -->
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-button" data-modal-close>
+          <svg width="8" height="8">
+            <use href="./images/icons.svg#icon-close" class="close-svg"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <!-- МОДАЛКА -->
+    <script src="./js/modal.js"></script>
   </body>
 </html>
