--- a/portfolio.html
+++ b/portfolio.html
@@ -42,12 +42,12 @@
             <li>
               <a
                 href="mailto:info@devstudio.com"
-                class="link item-mail addres-gap line"
+                class="link item-mail addres-gap"
                 >info@devstudio.com</a
               >
             </li>
             <li>
-              <a href="tel:+110001111111" class="link item-mail line"
+              <a href="tel:+110001111111" class="link item-mail"
                 >+11 (000) 111-11-11</a
               >
             </li>
@@ -79,7 +79,19 @@
           <ul class="list-portfolio list">
             <li class="li-solid">
               <a href="#" class="link">
-                <img src="./images/bankingapp.jpg" alt="Bank app" width="360" />
+                <div class="div-wraper">
+                  <img
+                    src="./images/bankingapp.jpg"
+                    class="portfolio-jpg"
+                    alt="Bank app"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="div-portfolio">
                   <h2 class="list-item header-portfolio">
                     Banking App Interface Concept
@@ -91,11 +103,18 @@
 
             <li class="li-solid">
               <a href="#" class="link">
-                <img
-                  src="./images/cashless.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                />
+                <div class="div-wraper">
+                  <img
+                    src="./images/cashless.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="div-portfolio">
                   <h2 class="list-item header-portfolio">Cashless Payment</h2>
                   <p class="main-p">Marketing</p>
@@ -105,11 +124,18 @@
 
             <li class="li-solid">
               <a href="#" class="link">
-                <img
-                  src="./images/meditationapp.jpg"
-                  alt="Meditation App"
-                  width="360"
-                />
+                <div class="div-wraper">
+                  <img
+                    src="./images/meditationapp.jpg"
+                    alt="Meditation App"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="div-portfolio">
                   <h2 class="list-item header-portfolio">Meditation App</h2>
                   <p class="main-p">App</p>
@@ -119,11 +145,18 @@
 
             <li class="li-solid">
               <a href="#" class="link">
-                <img
-                  src="./images/taxiservice.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                />
+                <div class="div-wraper">
+                  <img
+                    src="./images/taxiservice.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="div-portfolio">
                   <h2 class="list-item header-portfolio">Taxi Service</h2>
                   <p class="main-p">Marketing</p>
@@ -133,11 +166,18 @@
 
             <li class="li-solid">
               <a href="#" class="link">
-                <img
-                  src="./images/screen.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                />
+                <div class="div-wraper">
+                  <img
+                    src="./images/screen.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="div-portfolio">
                   <h2 class="list-item header-portfolio">
                     Screen Illustrations
@@ -149,11 +189,18 @@
 
             <li class="li-solid">
               <a href="#" class="link">
-                <img
-                  src="./images/courses.jpg"
-                  alt="Online Courses"
-                  width="360"
-                />
+                <div class="div-wraper">
+                  <img
+                    src="./images/courses.jpg"
+                    alt="Online Courses"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="div-portfolio">
                   <h2 class="list-item header-portfolio">Online Courses</h2>
                   <p class="main-p">Marketing</p>
@@ -163,11 +210,18 @@
 
             <li class="li-solid">
               <a href="#" class="link">
-                <img
-                  src="./images/instagram.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                />
+                <div class="div-wraper">
+                  <img
+                    src="./images/instagram.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="div-portfolio">
                   <h2 class="list-item header-portfolio">
                     Instagram Stories Concept
@@ -179,7 +233,14 @@
 
             <li class="li-solid">
               <a href="#" class="link">
-                <img src="./images/food.jpg" alt="Organic Food" width="360" />
+                <div class="div-wraper">
+                  <img src="./images/food.jpg" alt="Organic Food" width="360" />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="div-portfolio">
                   <h2 class="list-item header-portfolio">Organic Food</h2>
                   <p class="main-p">Web Site</p>
@@ -189,7 +250,18 @@
 
             <li class="li-solid">
               <a href="#" class="link">
-                <img src="./images/coffee.jpg" alt="Fresh Coffee" width="360" />
+                <div class="div-wraper">
+                  <img
+                    src="./images/coffee.jpg"
+                    alt="Fresh Coffee"
+                    width="360"
+                  />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <div class="div-portfolio">
                   <h2 class="list-item header-portfolio">Fresh Coffee</h2>
                   <p class="main-p">Web Site</p>
