--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
     </footer>
     <!-- МОДАЛКА -->
     <div class="backdrop is-hidden" data-modal>
-      <div class="modal">
+      <div class="modal modal-translate">
         <button type="button" class="modal-button" data-modal-close>
           <svg width="8" height="8">
             <use href="./images/icons.svg#icon-close" class="close-svg"></use>
