--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,9 @@
           <ul class="list nav-list">
             <li><a href="./index.html" class="link item line">Studio</a></li>
             <li>
-              <a href="./portfolio.html" class="link item line">Portfolio</a>
+              <a href="./portfolio.html" class="link item line active"
+                >Portfolio</a
+              >
             </li>
             <li><a href="" class="link item line">Contacts</a></li>
           </ul>
