--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
             >Web<span class="logo-span">Studio</span></a
           >
           <ul class="list nav-list">
-            <li><a href="./index.html" class="link item line">Studio</a></li>
+            <li>
+              <a href="./index.html" class="link item line active">Studio</a>
+            </li>
             <li>
               <a href="./portfolio.html" class="link item line">Portfolio</a>
             </li>
